fixed cut off content

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #F8F8FF;
+}
+
 :root{
     color-scheme: light;
 }
